--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,88 +3,83 @@
   width: 100vw;
   color: white;
   padding-top: 2rem;
-  position: absolute;
 }
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
-
+  font-size: 1rem;
 }
 
 .liste {
-    display: flex;
+  display: flex;
   list-style-type: none;
   gap: 5rem;
+  padding: 0;
 }
 
 .logo {
-  width: 10rem;
+  width: 3rem;
 }
 
 .avatar {
-    width: 15rem;
+  width: 15rem;
+  border: 1rem solid white;
+  border-radius: 50%;
+}
+
+.titleContainer {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  font-size: 2rem;
+  width: 30%;
+}
+
+@media screen and (width > 992px) {
+  .global {
+    background-color: #a306b6;
+    width: 100vw;
+    color: white;
+    padding: 2rem;
+  }
+  .container {
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 1.5rem;
+  }
+
+  .liste {
+    display: flex;
+    list-style-type: none;
+    gap: 5rem;
+    margin-right: 3rem;
+  }
+
+  .logo {
+    width: 5rem;
+  }
+
+  .avatar {
+    width: 20rem;
     border: 1rem solid white;
     border-radius: 50%;
+  }
 
-}
-
-.titleContainer{
+  .titleContainer {
     display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
-}
+    justify-content: space-around;
+  }
 
-.title{
-font-size: 3rem;
-width: 30%;
-}
-
-@media screen and (width > 992px ){ 
-    .global {
-        background-color: #a306b6;
-        width: 100vw;
-        color: white;
-        padding: 2rem;
-        position: absolute;
-      }
-      .container {
-        flex-direction: row;
-        justify-content: space-between;
-        font-size: 2rem;
-      
-      }
-      
-      .liste {
-          display: flex;
-        list-style-type: none;
-        gap: 5rem;
-      margin-right: 3rem;
-      }
-      
-      .logo {
-        width: 10rem;
-      }
-      
-      .avatar {
-          width: 20rem;
-          border: 1rem solid white;
-          border-radius: 50%;
-      
-      }
-      
-      .titleContainer{
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          justify-content: space-around;
-      }
-      
-      .title{
-
-      width: 25%;
-      } 
+  .title {
+    font-size: 3rem;
+    width: 25%;
+  }
 }
