--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,8 @@
   background-color: #a306b6;
   width: 100vw;
   color: white;
-  padding-top: 2rem;
+  height: 50vh;
+  
 }
 .container {
   display: flex;
@@ -34,6 +35,7 @@
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .title {
@@ -46,7 +48,6 @@
     background-color: #a306b6;
     width: 100vw;
     color: white;
-    padding: 2rem;
   }
   .container {
     flex-direction: row;
@@ -58,11 +59,12 @@
     display: flex;
     list-style-type: none;
     gap: 5rem;
-    margin-right: 3rem;
+    margin-right: 1rem;
   }
 
   .logo {
     width: 5rem;
+    margin-left: 1rem;
   }
 
   .avatar {
