--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,6 @@
   width: 100vw;
   color: white;
   height: 50vh;
-  
 }
 .container {
   display: flex;
@@ -35,12 +34,16 @@
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 90%;
 }
 
 .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 2rem;
   width: 30%;
+  flex-wrap: wrap;
 }
 
 @media screen and (width > 992px) {
@@ -57,9 +60,9 @@
 
   .liste {
     display: flex;
-    list-style-type: none;
-    gap: 5rem;
-    margin-right: 1rem;
+    width: 40%;
+    justify-content: space-evenly;
+    gap: 0;
   }
 
   .logo {
@@ -82,6 +85,6 @@
 
   .title {
     font-size: 3rem;
-    width: 25%;
+    width: 15%;
   }
 }
